# openxrrs-barebones

./: .gitignore  Cargo.toml
examples/: demo.rs  triangle.rs
src/: app.rs  engine.rs  lib.rs
src/graphics/: command_buffer.rs  command_pool.rs  device.rs  fence.rs  framebuffers.rs  instance.rs  mod.rs  physical_device.rs  pipeline.rs  render_pass.rs  renderer.rs  shader_module.rs  vk_base.rs  vk_instance.rs  vk_renderer.rs
src/xr/: action.rs  mod.rs  space.rs  swapchain.rs  xr_base.rs  xr_instance.rs  xr_renderer.rs
