[package]
name = "xrrs"
description = "Middle School Project"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.37"
ctrlc = "3.1.5"
openxr = { git = "https://github.com/Ralith/openxrs", features = ["loaded"]}

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1"
ndk-glue = "0.6.1"

[[example]]
name = "demo"

[[example]]
name = "demo-android"
path = "examples/demo.rs"
crate-type = ["cdylib"]

[[example]]
name = "triangle"

# Below is metadata used by cargo-apk
[package.metadata.android]
runtime_libs = "examples/libs"

[package.metadata.android.sdk]
min_sdk_version = 21
target_sdk_version = 30

[package.metadata.android.application.activity]
config_changes = "screenSize|screenLayout|orientation|keyboardHidden|keyboard|navigation|uiMode"
launch_mode = "singleTask"
orientation = "landscape"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["com.oculus.intent.category.VR", "android.intent.category.LAUNCHER"]

